bind/bind9-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bind9-deployment
  namespace: bind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bind9
  template:
    metadata:
      labels:
        app: bind9
    spec:
      volumes:
        - name: bind-config
          persistentVolumeClaim: 
            claimName: bind-data-pvc
      containers:
      - name: bind9
        volumeMounts:
          - mountPath: "/etc/bind"
            name: bind-config
        image: ubuntu/bind9:9.20-24.10_beta 
        ports:
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
