bind/bind9-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-service
  labels:
    app: dns-service
spec:
  selector:
    app: dns-service
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - protocol: TCP
    port: 53
    targetPort: 53
    name: dns-tcp
  - protocol: UDP
    port: 53
    targetPort: 53
    name: dns-udp
